[project]
name = "sevasetu"
version = "0.1.0"
description = ""
authors = [
    {name = "Amogh Shukla",email = "amoghshukla548@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
